added lang select

--- a/src/assets/i18n/cs.json
+++ b/src/assets/i18n/cs.json
@@ -1,4 +1,5 @@
 {
+  "selectLang": "Vyberte jazyk",
   "notes.title": "Poznámky",
   "notes.detail": "Detail poznámky",
   "notes.add": "Přidat novou poznámku",
