--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "selectLang": "Select language",
   "notes.title": "Notes",
-  "notes.detail": "Notes detail",
+  "notes.detail": "Note detail",
   "notes.add": "Add new Note",
   "notes.remove": "Delete",
   "notes.remove.confirm": "Are you sure?",
